--- a/css/common.css
+++ b/css/common.css
@@ -4,8 +4,14 @@
 html{
   background-color: #fff;
 }
+body{
+  color: #fff
+}
 .w-100{
   width: 100%;
+}
+.w-135{
+  width: 135px;
 }
 /*flex布局*/
 .d-flex{
@@ -18,6 +24,9 @@ html{
 /* 两端排列 */
 .justify-content-between{
   justify-content: space-between;
+}
+.align-content-center{
+  align-content: space-between;
 }
 /* 竖直居中 */
 .align-items-center{
@@ -33,16 +42,48 @@ html{
 }
 
 /*内边距*/
+  /* top */
 .pt-10{
   padding-top: 10px
 }
+  /* right */
 .pr-10{
   padding-right: 10px;
 }
 
 /*外边距*/
+    /* top */
+.mt-6{
+  margin-top: 6px;
+}
+.mt-8{
+  margin-top: 8px;
+}
 .mt-10{
   margin-top: 10px;
+}
+  /* right */
+.mr-20{
+  margin-right: 20px;
+}
+.mr-10{
+  margin-right: 10px;
+}
+.mr-18{
+  margin-right: 18px;
+}
+  /* left */
+.ml-5{
+  margin-left:  5px;
+}
+.ml-10{
+  margin-left:  10px;
+}
+.ml-15{
+  margin-left:  15px;
+}
+.ml-20{
+  margin-left: 20px;
 }
 
 /*文字大小*/
@@ -54,8 +95,14 @@ html{
 .font-12{
   font-size: 12px;
 }
+.font-14{
+  font-size: 14px;
+}
 .font-16{
   font-size: 16px;
+}
+.font-18{
+  font-size: 18px;
 }
 .font-20{
   font-size: 20px;
