--- a/css/index.css
+++ b/css/index.css
@@ -58,3 +58,15 @@
     padding: 0 20px;
     border: 2px solid #FFFFFF;
 }
+/* 左边第二块内容 样式 endr*/
+
+/* 左边第三块内容 样式 star*/
+.main_Left_Third .left_Body ul{
+    padding-bottom: 5px;
+}
+.main_Left_Third .left_Body ul li{
+    margin-right: 20px;
+    margin-top: 20px;
+    border-bottom: 1px solid rgba(13,202,114, 0.8)
+}
+
