--- a/css/index.css
+++ b/css/index.css
@@ -61,12 +61,22 @@
 /* 左边第二块内容 样式 endr*/
 
 /* 左边第三块内容 样式 star*/
-.main_Left_Third .left_Body ul{
+/* .main_Left_Third .left_Body ul{
     padding-bottom: 5px;
-}
+} */
 .main_Left_Third .left_Body ul li{
     margin-right: 20px;
     margin-top: 20px;
     border-bottom: 1px solid rgba(13,202,114, 0.8)
 }
-
+.stars{
+    padding: 30px 50px  60px;
+}
+.score{
+    height: 69px;
+    padding-top: 12px;
+    margin-top: -43px;
+    border-top: 1px solid rgba(123,127,142, 0.3);
+    
+    
+}
